// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailResultItem should not render empty value 1`] = `""`;

exports[`MapDetailResultItem should not render without value 1`] = `""`;

exports[`MapDetailResultItem should render a blue bullet if status is \`info\` 1`] = `
<li
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      label
    </div>
    <div
      className="map-detail-result__item-value
          map-detail-result__item-value--info"
    >
      value
    </div>
  </section>
</li>
`;

exports[`MapDetailResultItem should render a red bullet if status is \`alert\` 1`] = `
<li
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      label
    </div>
    <div
      className="map-detail-result__item-value
          map-detail-result__item-value--alert"
    >
      value
    </div>
  </section>
</li>
`;

exports[`MapDetailResultItem should render label and value 1`] = `
<li
  className="map-detail-result__item"
>
  <section
    className="map-detail-result__item-content"
  >
    <div
      className="map-detail-result__item-label"
    >
      label
    </div>
    <div
      className="map-detail-result__item-value
          "
    >
      value
    </div>
  </section>
</li>
`;
